[gd_scene load_steps=10 format=3 uid="uid://cq2b8v1v3u2fm"]

[ext_resource type="Script" path="res://Content/Game/Scripts/ScoreCalculator/bill_slot.gd" id="1_p0sv3"]
[ext_resource type="Texture2D" uid="uid://evy6pj2whj1e" path="res://Content/Game/textures/Treasures/inventory_versions/Tryptichite_inv.png" id="2_ilwlw"]
[ext_resource type="Theme" uid="uid://ds48g7imsbnvb" path="res://ToilMines.tres" id="3_m86rc"]
[ext_resource type="Texture2D" uid="uid://crkoovodnwd7g" path="res://Textures/Icons/collectible_coin_big_idle_1.png" id="3_off5y"]
[ext_resource type="Script" path="res://addons/SolanaSDK/Scripts/Utility/Input/number_label.gd" id="4_6gxx5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7p82j"]

[sub_resource type="Animation" id="Animation_a0xq3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Quantity:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TokenVisual:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("QuantityStretcher:size_flags_stretch_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TokenValue:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4vlyc"]
resource_name = "Show"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Quantity:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TokenVisual:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.35, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("QuantityStretcher:size_flags_stretch_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.05, 0.2, 0.45),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.51, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TokenValue:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.45, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(1, 1, 1, 1), Color(0.988235, 0.937255, 0.552941, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_38xtr"]
_data = {
"RESET": SubResource("Animation_a0xq3"),
"Show": SubResource("Animation_4vlyc")
}

[node name="BillSlot" type="HBoxContainer"]
custom_minimum_size = Vector2(400, 60)
offset_right = 400.0
offset_bottom = 60.0
size_flags_horizontal = 3
theme_override_constants/separation = 10
script = ExtResource("1_p0sv3")

[node name="Visual" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
texture = ExtResource("2_ilwlw")

[node name="QuantityStretcher" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_7p82j")

[node name="Quantity" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("3_m86rc")
theme_override_font_sizes/font_size = 40
text = "x 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TokenValue" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("3_m86rc")
theme_override_font_sizes/font_size = 60
text = "50"
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("4_6gxx5")
format_mode = 1
decimal_amount = 2

[node name="TokenVisual" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
texture = ExtResource("3_off5y")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_38xtr")
}
